force-app/main/default/objects/Schedule_A__c/Schedule_A__c.object-meta.xml
<CustomObject>
    <description>Schedule A Custom Object</description>
    <label>PA Model Approval</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Schedule A</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PA Model Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>