force-app/main/default/objects/Schedule_A__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated with the Schedule A</description>
    <inlineHelpText>Account associated with the Schedule A</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Schedule A List</relationshipLabel>
    <relationshipName>Schedule_A</relationshipName>
    <type>Lookup</type>
</CustomField>