force-app/main/default/objects/Schedule_A__c/fields/Additional_Terms_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_1__c</fullName>
    <label>Additional Terms 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>