force-app/main/default/objects/Schedule_A__c/fields/Additional_Terms_4__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_4__c</fullName>
    <label>Additional Terms 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>