force-app/main/default/objects/Schedule_A__c/fields/Approved_10__c.field-meta.xml
<CustomField>
    <fullName>Approved_10__c</fullName>
    <label>tobedeleted_Approved 10</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>