force-app/main/default/objects/Schedule_A__c/fields/Approver_10__c.field-meta.xml
<CustomField>
    <fullName>Approver_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Schedule A Approver 10</description>
    <inlineHelpText>Schedule A Approver 10</inlineHelpText>
    <label>Approver 10</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Schedule_A_10</relationshipName>
    <type>Lookup</type>
</CustomField>