force-app/main/default/objects/Schedule_A__c/fields/Approver_11__c.field-meta.xml
<CustomField>
    <fullName>Approver_11__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Schedule A Approver 11</description>
    <inlineHelpText>Schedule A Approver 11</inlineHelpText>
    <label>Approver 11</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Schedule_11_6</relationshipName>
    <type>Lookup</type>
</CustomField>