force-app/main/default/objects/Schedule_A__c/fields/Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Schedule A Approver 1</description>
    <inlineHelpText>Schedule A Approver 1</inlineHelpText>
    <label>Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Schedule_A_1</relationshipName>
    <type>Lookup</type>
</CustomField>