force-app/main/default/objects/Schedule_A__c/fields/Approver_1_Title__c.field-meta.xml
<CustomField>
    <fullName>Approver_1_Title__c</fullName>
    <description>Schedule A Approver 1 Title</description>
    <inlineHelpText>Schedule A Appover 1 Title</inlineHelpText>
    <label>Approver 1 Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>