force-app/main/default/objects/Schedule_A__c/fields/Approver_2_Title__c.field-meta.xml
<CustomField>
    <fullName>Approver_2_Title__c</fullName>
    <description>Schedule A Approver 2 Title</description>
    <inlineHelpText>Scheudle A Approver 2 Title</inlineHelpText>
    <label>Approver 2 Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>