force-app/main/default/objects/Schedule_A__c/fields/Approver_3_Title__c.field-meta.xml
<CustomField>
    <fullName>Approver_3_Title__c</fullName>
    <description>Schedule A Approver 3 Title</description>
    <inlineHelpText>Schedule A Approver 3 Title</inlineHelpText>
    <label>Approver 3 Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>