force-app/main/default/objects/Schedule_A__c/fields/AWSRequestID__c.field-meta.xml
<CustomField>
    <fullName>AWSRequestID__c</fullName>
    <label>AWSRequestID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>