force-app/main/default/objects/Schedule_A__c/fields/Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length__c</fullName>
    <description>Length of Contract</description>
    <inlineHelpText>Length of Contract</inlineHelpText>
    <label>Contract Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>