force-app/main/default/objects/Schedule_A__c/fields/Cost_to_IRM5__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_IRM5__c</fullName>
    <label>tobedeleted_Cost to IRM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>