force-app/main/default/objects/Schedule_A__c/fields/Current_Effective_Discount__c.field-meta.xml
<CustomField>
    <fullName>Current_Effective_Discount__c</fullName>
    <description>Current Effective Discount</description>
    <inlineHelpText>Current Effective Discount</inlineHelpText>
    <label>RM Current Effective Discount</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>