force-app/main/default/objects/Schedule_A__c/fields/DBR_Service_Effective_Discount__c.field-meta.xml
<CustomField>
    <fullName>DBR_Service_Effective_Discount__c</fullName>
    <label>DBR Service Effective Discount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>