force-app/main/default/objects/Schedule_A__c/fields/DBR_Storate_Effective_Discount__c.field-meta.xml
<CustomField>
    <fullName>DBR_Storate_Effective_Discount__c</fullName>
    <label>DBR Storage Effective Discount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>