force-app/main/default/objects/Schedule_A__c/fields/Deal_Summary4__c.field-meta.xml
<CustomField>
    <fullName>Deal_Summary4__c</fullName>
    <label>tobedeleted_Deal Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>