force-app/main/default/objects/Schedule_A__c/fields/DM_Competition__c.field-meta.xml
<CustomField>
    <fullName>DM_Competition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM-Competition</label>
    <type>Checkbox</type>
</CustomField>