force-app/main/default/objects/Schedule_A__c/fields/DM_Multi_Year_Deal__c.field-meta.xml
<CustomField>
    <fullName>DM_Multi_Year_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Multi-Year Deal</label>
    <type>Checkbox</type>
</CustomField>