force-app/main/default/objects/Schedule_A__c/fields/DM_Vended_Unvended__c.field-meta.xml
<CustomField>
    <fullName>DM_Vended_Unvended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM-Vended/Unvended</label>
    <type>Checkbox</type>
</CustomField>