force-app/main/default/objects/Schedule_A__c/fields/Floor_Revenue_Realization_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Floor_Revenue_Realization_Shadow__c</fullName>
    <label>Floor Revenue Realization Shadow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>