force-app/main/default/objects/Schedule_A__c/fields/Gross_Margin_dollar__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_dollar__c</fullName>
    <formula>Total_Revenue__c  -  Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>