force-app/main/default/objects/Schedule_A__c/fields/IMGA__c.field-meta.xml
<CustomField>
    <fullName>IMGA__c</fullName>
    <label>IMGA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>