force-app/main/default/objects/Schedule_A__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <label>Investment $</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>