force-app/main/default/objects/Schedule_A__c/fields/Investment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Investment_Formula__c</fullName>
    <formula>Investment__c/CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment $ Formula</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>