force-app/main/default/objects/Schedule_A__c/fields/IsMaster__c.field-meta.xml
<CustomField>
    <fullName>IsMaster__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Master Schedule A</description>
    <inlineHelpText>Is Master Schedule A</inlineHelpText>
    <label>IsMaster</label>
    <type>Checkbox</type>
</CustomField>