force-app/main/default/objects/Schedule_A__c/fields/IsTemplate__c.field-meta.xml
<CustomField>
    <fullName>IsTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If schedule A is a template</description>
    <inlineHelpText>If schedule A is a template</inlineHelpText>
    <label>IsTemplate</label>
    <type>Checkbox</type>
</CustomField>