force-app/main/default/objects/Schedule_A__c/fields/Largest_Market_2__c.field-meta.xml
<CustomField>
    <fullName>Largest_Market_2__c</fullName>
    <description>Largest Market 2</description>
    <inlineHelpText>Largest Market 2</inlineHelpText>
    <label>Largest Market 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>