force-app/main/default/objects/Schedule_A__c/fields/List_Price_Year__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Year__c</fullName>
    <description>This is the year of the list pricing being pulled in from the PA Model.</description>
    <label>List Price Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>