force-app/main/default/objects/Schedule_A__c/fields/List_Price_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Year_Formula__c</fullName>
    <formula>TEXT( List_Price_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Year</label>
    <type>Text</type>
</CustomField>