force-app/main/default/objects/Schedule_A__c/fields/Margin_Delta__c.field-meta.xml
<CustomField>
    <fullName>Margin_Delta__c</fullName>
    <label>Margin Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>