force-app/main/default/objects/Schedule_A__c/fields/New_Storage_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Storage_Price__c</fullName>
    <description>New Storage Price</description>
    <label>New Storage Price</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>