force-app/main/default/objects/Schedule_A__c/fields/New_Storage_Volume__c.field-meta.xml
<CustomField>
    <fullName>New_Storage_Volume__c</fullName>
    <description>New Storage Volume</description>
    <inlineHelpText>New Storage Volume</inlineHelpText>
    <label>New Storage Volume</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>