force-app/main/default/objects/Schedule_A__c/fields/Non_Billable_Deal_Term1__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Deal_Term1__c</fullName>
    <label>tobedeleted_1. Non-Billable Deal Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>