force-app/main/default/objects/Schedule_A__c/fields/Non_Billable_Deal_Term4__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Deal_Term4__c</fullName>
    <label>tobedeleted_4. Non-Billable Deal Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>