force-app/main/default/objects/Schedule_A__c/fields/Number_of_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approvers__c</fullName>
    <description>Number of Approvers</description>
    <label>Number of Approvers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>