force-app/main/default/objects/Schedule_A__c/fields/Number_of_Shred_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shred_Locations__c</fullName>
    <label>Number of Shred Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>