force-app/main/default/objects/Schedule_A__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Associated with Schedule A</description>
    <inlineHelpText>Opportunity Associated with Schedule A</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>PA Model Approval</relationshipLabel>
    <relationshipName>Schedule_A_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>