force-app/main/default/objects/Schedule_A__c/fields/Owner_Director_email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Director_email__c</fullName>
    <label>Owner Director (email)</label>
    <type>Email</type>
</CustomField>