force-app/main/default/objects/Schedule_A__c/fields/Pricing_Recommendations1__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Recommendations1__c</fullName>
    <label>tobedeleted_Pricing Recommendations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>