force-app/main/default/objects/Schedule_A__c/fields/Quote_Description__c.field-meta.xml
<CustomField>
    <fullName>Quote_Description__c</fullName>
    <label>PA Quote Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>