force-app/main/default/objects/Schedule_A__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>PA Quote Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>