force-app/main/default/objects/Schedule_A__c/fields/Rebates__c.field-meta.xml
<CustomField>
    <fullName>Rebates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebates</label>
    <type>Checkbox</type>
</CustomField>