force-app/main/default/objects/Schedule_A__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Schedule A Reference</description>
    <inlineHelpText>Schedule A Reference</inlineHelpText>
    <label>Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>