force-app/main/default/objects/Schedule_A__c/fields/Revenue_Dilution__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Dilution__c</fullName>
    <label>% Revenue Dilution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>