force-app/main/default/objects/Schedule_A__c/fields/Revenue_Dilution_dollar__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Dilution_dollar__c</fullName>
    <description>#21572: To store Revenue Dilution $ from XML</description>
    <label>Revenue Dilution $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>