force-app/main/default/objects/Schedule_A__c/fields/RM_Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>RM_Contract_Length__c</fullName>
    <description>RM Contract length to be used in Cost Estimate</description>
    <label>RM_Contract_Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>