force-app/main/default/objects/Schedule_A__c/fields/RM_Discount__c.field-meta.xml
<CustomField>
    <fullName>RM_Discount__c</fullName>
    <formula>IF( Current_Effective_Discount__c = 0 ,  RM_List_Price_Discount__c  , IF( RM_List_Price_Discount__c = 0,  RM_Effective_Discount__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>