force-app/main/default/objects/Schedule_A__c/fields/RM_Free_Storage__c.field-meta.xml
<CustomField>
    <fullName>RM_Free_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RM Free Storage</label>
    <type>Checkbox</type>
</CustomField>