force-app/main/default/objects/Schedule_A__c/fields/RM_FUI__c.field-meta.xml
<CustomField>
    <fullName>RM_FUI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RM Free Up &amp; In to be used in Customer Incentives</description>
    <label>RM Free Up &amp; In (Initial Move)</label>
    <type>Checkbox</type>
</CustomField>