force-app/main/default/objects/Schedule_A__c/fields/RM_List_Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>RM_List_Price_Discount__c</fullName>
    <description>List Price Discount</description>
    <inlineHelpText>List Price Discount</inlineHelpText>
    <label>RM Storage List Price Discount</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>