force-app/main/default/objects/Schedule_A__c/fields/RM_Multi_Year_Deal__c.field-meta.xml
<CustomField>
    <fullName>RM_Multi_Year_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RM Multiyear to be used in Customer Incentives</description>
    <label>RM Multi-Year Deal</label>
    <type>Checkbox</type>
</CustomField>