force-app/main/default/objects/Schedule_A__c/fields/RM_Other__c.field-meta.xml
<CustomField>
    <fullName>RM_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RM Other</label>
    <type>Checkbox</type>
</CustomField>