force-app/main/default/objects/Schedule_A__c/fields/RM_Price_Decrease_Reason__c.field-meta.xml
<CustomField>
    <fullName>RM_Price_Decrease_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RM-Price Decrease Reason</label>
    <type>Checkbox</type>
</CustomField>