force-app/main/default/objects/Schedule_A__c/fields/RM_PW_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>RM_PW_Fee_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RM PW Fee Paid</description>
    <label>RM PW Fee Paid</label>
    <type>Checkbox</type>
</CustomField>