force-app/main/default/objects/Schedule_A__c/fields/RM_Service_List_Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>RM_Service_List_Price_Discount__c</fullName>
    <label>RM Service List Price Discount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>