force-app/main/default/objects/Schedule_A__c/fields/RM_Unvended__c.field-meta.xml
<CustomField>
    <fullName>RM_Unvended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inventory Purchase Program to be used in Customer Incentives</description>
    <label>RM Inventory Purchase Program</label>
    <type>Checkbox</type>
</CustomField>