force-app/main/default/objects/Schedule_A__c/fields/RM_Vended_Unvended__c.field-meta.xml
<CustomField>
    <fullName>RM_Vended_Unvended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RM-Vended/Unvended</label>
    <type>Checkbox</type>
</CustomField>