force-app/main/default/objects/Schedule_A__c/fields/Salesseg__c.field-meta.xml
<CustomField>
    <fullName>Salesseg__c</fullName>
    <label>Sales Segment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>