force-app/main/default/objects/Schedule_A__c/fields/Service_Labor_rate__c.field-meta.xml
<CustomField>
    <fullName>Service_Labor_rate__c</fullName>
    <description>Labor rate (varies by area) associated with providing the full product</description>
    <label>Service Labor rate</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>