force-app/main/default/objects/Schedule_A__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <label>Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DB&amp;R</fullName>
            </value>
            <value>
                <fullName>RM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>