force-app/main/default/objects/Schedule_A__c/fields/ShredRevenue_10__c.field-meta.xml
<CustomField>
    <fullName>ShredRevenue_10__c</fullName>
    <label>ShredRevenue 10</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>