force-app/main/default/objects/Schedule_A__c/fields/ShredRevenue_1__c.field-meta.xml
<CustomField>
    <fullName>ShredRevenue_1__c</fullName>
    <label>ShredRevenue 1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>