force-app/main/default/objects/Schedule_A__c/fields/ShredRevenue_2__c.field-meta.xml
<CustomField>
    <fullName>ShredRevenue_2__c</fullName>
    <label>ShredRevenue 2</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>