force-app/main/default/objects/Schedule_A__c/fields/SS_Competition__c.field-meta.xml
<CustomField>
    <fullName>SS_Competition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tobedeleted_SS-Competition</label>
    <type>Checkbox</type>
</CustomField>