force-app/main/default/objects/Schedule_A__c/fields/SS_Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>SS_Contract_Length__c</fullName>
    <description>Shredding Services Contract Length to be used in Cost Estimate</description>
    <label>SS_Contract_Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>