force-app/main/default/objects/Schedule_A__c/fields/SS_Tiered_Pricing__c.field-meta.xml
<CustomField>
    <fullName>SS_Tiered_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tobedeleted_SS Tiered Pricing</label>
    <type>Checkbox</type>
</CustomField>