force-app/main/default/objects/Schedule_A__c/fields/SS_Vended_Unvended__c.field-meta.xml
<CustomField>
    <fullName>SS_Vended_Unvended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tobedeleted_SS-Vended/Unvended</label>
    <type>Checkbox</type>
</CustomField>