force-app/main/default/objects/Schedule_A__c/fields/Target_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Target_Revenue__c</fullName>
    <label>Target Revenue</label>
    <summarizedField>Schedule_A_Quote_Item__c.Target_Revenue__c</summarizedField>
    <summaryForeignKey>Schedule_A_Quote_Item__c.Schedule_A__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>