force-app/main/default/objects/Schedule_A__c/fields/Target_Revenue_Realization__c.field-meta.xml
<CustomField>
    <fullName>Target_Revenue_Realization__c</fullName>
    <description>Changed formula and including Old Revenue Year Target Pricing as per story requirement #19276</description>
    <formula>Total_Revenue__c  /  Revenue_Year_Target_Pricing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Revenue Realization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>