force-app/main/default/objects/Schedule_A__c/fields/Total_Cashview_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Cashview_Margin_Percent__c</fullName>
    <formula>Total_Cashview_Margin__c  /  Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cashview Margin %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>