force-app/main/default/objects/Schedule_A__c/fields/Total_Floor_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Floor_Revenue__c</fullName>
    <description>Used to Map Floor Revenue From PA Model XML file</description>
    <label>Total Floor Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>