force-app/main/default/objects/Schedule_A__c/fields/Total_New_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_New_Revenue__c</fullName>
    <description>Total estimated revenue calculated in the PA Model based on the new storage volume.</description>
    <label>Total New Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>