force-app/main/default/objects/Schedule_A__c/fields/Units6__c.field-meta.xml
<CustomField>
    <fullName>Units6__c</fullName>
    <label>tobedeleted_Units</label>
    <length>25</length>
    <type>Text</type>
</CustomField>