force-app/main/default/objects/Schedule_A__c/recordTypes/Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Read_Only</fullName>
    <active>true</active>
    <description>Read Only Schedule A</description>
    <label>Read-Only</label>
</RecordType>