force-app/main/default/objects/Schedule_A__c/recordTypes/Recall_Locked.recordType-meta.xml
<RecordType>
    <fullName>Recall_Locked</fullName>
    <active>true</active>
    <description>Only allow users to change aprovers</description>
    <label>Recall Locked</label>
</RecordType>