force-app/main/default/objects/Schedule_A__c/recordTypes/Schedule_A.recordType-meta.xml
<RecordType>
    <fullName>Schedule_A</fullName>
    <active>true</active>
    <description>Standard Schedule</description>
    <label>Schedule A</label>
</RecordType>