force-app/main/default/objects/Schedule_A__c/validationRules/Cannot_Change_Approver_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Approver_10</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED( Approver_10__c ) ,
ISPICKVAL(Approved_10__c, &quot;Yes&quot;)
)</errorConditionFormula>
    <errorDisplayField>Approver_10__c</errorDisplayField>
    <errorMessage>You cannot change the name of the Approver if they already approved this record.</errorMessage>
</ValidationRule>