force-app/main/default/objects/Schedule_A__c/validationRules/Cannot_Change_Approver_4.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Approver_4</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED( Approver_4__c ) ,
ISPICKVAL(Approved_4__c, &quot;Yes&quot;)
)</errorConditionFormula>
    <errorDisplayField>Approver_4__c</errorDisplayField>
    <errorMessage>You cannot change the name of the Approver if they already approved this record.</errorMessage>
</ValidationRule>